tests/ui/async-await/unsized-across-await.stderr
error[E0277]: the size for values of type `dyn std::fmt::Display` cannot be known at compilation time
  --> $DIR/unsized-across-await.rs:6:9
   |
LL |     let _x = *x;
   |         ^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `dyn std::fmt::Display`
   = note: all local variables must have a statically known size
help: references are always `Sized`, even if they point to unsized data; consider not dereferencing the expression
   |
LL -     let _x = *x;
LL +     let _x = x;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
